tests/snapshots/integration_tests__list.snap
---
source: tests/integration_tests.rs
expression: output
---
_openmp_mutex 4.5-2_gnu (linux-64): BSD-3-Clause 
binutils_impl_linux-64 2.43-h4bf12b8_4 (linux-64): GPL-3.0-only 
ca-certificates 2025.4.26-hbd8a1cb_0 (noarch): ISC 
gcc_impl_linux-64 13.3.0-h1e990d8_2 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
k9s 0.50.4-h643be8f_0 (linux-64): Apache-2.0 
kernel-headers_linux-64 3.10.0-he073ed8_18 (noarch): LGPL-2.0-or-later AND LGPL-2.0-or-later WITH exceptions AND GPL-2.0-or-later AND MPL-2.0 (Non-SPDX)
ld_impl_linux-64 2.43-h712a8e2_4 (linux-64): GPL-3.0-only 
libgcc 15.1.0-h767d61c_2 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libgcc-devel_linux-64 13.3.0-hc03c837_102 (noarch): GPL-3.0-only WITH GCC-exception-3.1 
libgcc-ng 15.1.0-h69a702a_2 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libgomp 15.1.0-h767d61c_2 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libsanitizer 13.3.0-he8ea267_2 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libstdcxx 15.1.0-h8f9b012_2 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libzlib 1.3.1-hb9d3cd8_2 (linux-64): Zlib 
openssl 3.5.0-h7b32b05_1 (linux-64): Apache-2.0 
pkg-config 0.29.2-h4bc722e_1009 (linux-64): GPL-2.0-or-later 
rust 1.77.2-h70c747d_1 (linux-64): MIT 
rust-std-x86_64-unknown-linux-gnu 1.77.2-h2c6d0dc_1 (noarch): MIT 
sysroot_linux-64 2.17-h0157908_18 (noarch): LGPL-2.0-or-later AND LGPL-2.0-or-later WITH exceptions AND GPL-2.0-or-later AND MPL-2.0 (Non-SPDX)
tzdata 2025b-h78e105d_0 (noarch): LicenseRef-Public-Domain 
vhs 0.7.2-ha770c72_0 (linux-64): MIT
